--- a/package.json
+++ b/package.json
@@ -4,16 +4,69 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build-home",
-    "build-home": "browserify -t [ babelify --presets [ react ] ] src/home/index.js -o build/app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ethan Look",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "babel-preset-es2015": "^6.14.0",
+    "bluebird": "^3.4.6",
+    "blueimp-md5": "^2.3.1",
+    "body-parser": "latest",
+    "bootstrap": "latest",
+    "commander": "latest",
+    "connect-redis": "latest",
+    "cookie-parser": "latest",
+    "errorhandler": "latest",
+    "express": "latest",
+    "express-session": "latest",
+    "fbemitter": "^2.1.1",
+    "history": "^4.2.0",
+    "immutable": "^3.8.1",
+    "joi": "^9.0.4",
+    "jquery": "latest",
+    "lodash": "latest",
+    "marked": "^0.3.6",
+    "method-override": "latest",
+    "moment": "^2.15.1",
+    "mongoose": "^4.6.1",
+    "morgan": "latest",
+    "pug": "latest",
+    "query-string": "^3.0.0",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-redux": "^4.4.5",
+    "react-router": "latest",
+    "react-router-redux": "^4.0.5",
+    "redis": "latest",
+    "redux": "^3.6.0",
+    "serve-favicon": "latest",
+    "serve-static": "latest",
+    "winston": "latest"
+  },
+  "devDependencies": {
+    "babel-cli": "latest",
+    "babel-core": "latest",
+    "babel-loader": "latest",
+    "babel-plugin-transform-react-jsx": "latest",
+    "babel-preset-react": "latest",
+    "bootstrap-webpack": "latest",
+    "css-loader": "latest",
+    "exports-loader": "^0.6.2",
+    "extract-text-webpack-plugin": "latest",
+    "file-loader": "latest",
+    "imports-loader": "^0.6.5",
+    "json-loader": "^0.5.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "mocha": "latest",
+    "node-sass": "^3.4.2",
+    "sass-loader": "latest",
+    "should": "^11.1.1",
+    "style-loader": "latest",
+    "superagent": "^3.0.0",
+    "url-loader": "latest",
+    "webpack": "^1.9.11",
+    "webpack-config": "latest"
   }
 }
